--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,7 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingBottom="16dp"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".ui.PdfView">
 
@@ -130,6 +131,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
+                android:textColor="@color/white"
                 android:text="materi"
                 android:textAllCaps="true" />
         </LinearLayout>
@@ -217,6 +219,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:textColor="@color/white"
                 android:text="daftar pustaka"
                 android:textAllCaps="true" />
         </LinearLayout>
