--- a/app/src/main/res/layout/pdf_view.xml
+++ b/app/src/main/res/layout/pdf_view.xml
@@ -5,10 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/includePdf"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/includePdf"
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/button2"
@@ -44,7 +57,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
-            android:layout_marginBottom="95dp"
+            android:layout_marginBottom="20dp"
             android:backgroundTint="@color/hijau_pastel"
             android:minWidth="0dp"
             android:minHeight="48dp"
