--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -26,9 +26,10 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="Tersimpan"/>
+                tools:text="Tersimpan" />
 
             <TextView
                 android:id="@+id/popUpSingleWarningContent"
@@ -51,7 +52,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
                 android:backgroundTint="@color/teal_700"
-                android:text="Oke"
+                android:text="Kembali"
                 android:textAllCaps="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
