--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,11 +4,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:background="@color/white"
+        android:layout_marginEnd="10dp">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarFragment"
@@ -34,13 +38,13 @@
             app:layout_constraintTop_toTopOf="@+id/toolbarFragment">
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/textViewToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="E-MODUL PROTISTA"
-                android:textSize="34sp" />
+                android:textSize="18sp" />
 
             <ImageView
                 android:layout_width="48dp"
