--- a/app/src/main/res/layout/activity_petunjuk_penggunaan.xml
+++ b/app/src/main/res/layout/activity_petunjuk_penggunaan.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.About">
+    tools:context=".ui.PetunjukPenggunaan">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profil_pengembang" />
+        app:srcCompat="@drawable/petunjuk_penggunaan" />
 </androidx.constraintlayout.widget.ConstraintLayout>
