--- a/app/src/main/res/layout/list_abjad.xml
+++ b/app/src/main/res/layout/list_abjad.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="5dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="5dp"
     app:cardElevation="3dp"
     app:cardMaxElevation="5dp">
@@ -10,17 +12,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#2196F3"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/listItemAbjadTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:background="#2196F3"
             android:text="TextView" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/isiListView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
