--- a/app/src/main/res/layout/pdf_view.xml
+++ b/app/src/main/res/layout/pdf_view.xml
@@ -16,31 +16,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
+    <LinearLayout
+        android:id="@+id/linearPdfView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/includePdf"
-        android:layout_alignParentBottom="true">
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button"
-            android:visibility="gone"
-            tools:visibility="gone" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal"
+        android:visibility="visible"
+        android:weightSum="4"
+        tools:visibility="visible">
 
         <Button
             android:id="@+id/ganggangBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/protozoaBtn"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/kuning_pastel"
             android:minWidth="0dp"
             android:minHeight="48dp"
@@ -50,14 +43,9 @@
 
         <Button
             android:id="@+id/fungiBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/hijau_pastel"
             android:minWidth="0dp"
             android:minHeight="48dp"
@@ -67,20 +55,50 @@
 
         <Button
             android:id="@+id/protozoaBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/fungiBtn"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
             android:backgroundTint="@color/blue_pastel"
             android:minWidth="0dp"
             android:minHeight="48dp"
             android:text="Protista Mirip Hewan"
             android:textAllCaps="false"
             android:textSize="11sp" />
+
+        <Button
+            android:id="@+id/peranBtn"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="@color/blue_pastel"
+            android:minWidth="0dp"
+            android:minHeight="48dp"
+            android:text="Peran Protista"
+            android:textAllCaps="false"
+            android:textSize="11sp" />
+
+    </LinearLayout>
+
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdfView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearPdfView"
+        android:layout_below="@+id/includePdf"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginBottom="0dp"
+        android:background="#E2EA92">
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button"
+            android:visibility="gone"
+            tools:visibility="gone" />
+
     </com.github.barteksc.pdfviewer.PDFView>
 
 </RelativeLayout>
