--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -63,13 +63,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ff7f50"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="2">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/kd_icon" />
 
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
                 android:text="Kompentensi Dasar"
@@ -93,8 +102,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#70a1ff"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/peta_konsep_icon" />
 
             <TextView
                 android:id="@+id/textView2"
@@ -102,6 +119,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:layout_weight="1"
                 android:text="peta konsep"
                 android:textAllCaps="true" />
         </LinearLayout>
@@ -123,17 +141,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#5352ed"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/materi_icon" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="materi"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
+                android:textAllCaps="true" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
@@ -153,14 +179,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#7bed9f"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/evaluasi_icon" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:layout_weight="1"
                 android:text="Evaluasi pembelajaran"
                 android:textAllCaps="true" />
         </LinearLayout>
@@ -182,14 +217,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffa502"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/glosarium_icon" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:layout_weight="1"
                 android:text="Glosarium"
                 android:textAllCaps="true" />
         </LinearLayout>
@@ -211,17 +255,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#3742fa"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/dapus_icon" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
                 android:text="daftar pustaka"
-                android:textAllCaps="true"
-                android:textColor="@color/white" />
+                android:textAllCaps="true" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
@@ -240,14 +292,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#2ed573"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/petunjuk_icon" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:layout_weight="1"
                 android:text="petunjuk penggunaan"
                 android:textAllCaps="true" />
         </LinearLayout>
@@ -268,8 +329,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#eccc68"
+            android:weightSum="2"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="0.8"
+                app:srcCompat="@drawable/profil_pengembang_icon" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -277,6 +346,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
+                android:layout_weight="1"
                 android:text="profil pengembangan"
                 android:textAllCaps="true" />
         </LinearLayout>
