--- a/app/src/main/res/layout/pdf_view.xml
+++ b/app/src/main/res/layout/pdf_view.xml
@@ -30,6 +30,13 @@
         tools:visibility="visible">
 
         <Button
+            android:id="@+id/lanjutViewButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="SPIN" />
+
+        <Button
             android:id="@+id/ganggangBtn"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
