--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -81,7 +81,7 @@
                 android:layout_weight="1"
                 android:gravity="center_horizontal|center_vertical"
                 android:lines="2"
-                android:text="Kompentensi Dasar"
+                android:text="KI,KD &amp; IPK"
                 android:textAllCaps="true" />
         </LinearLayout>
 
@@ -349,6 +349,7 @@
                 android:layout_weight="1"
                 android:text="profil pengembangan"
                 android:textAllCaps="true" />
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
