--- a/app/src/main/res/layout/pdf_view.xml
+++ b/app/src/main/res/layout/pdf_view.xml
@@ -117,9 +117,11 @@
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
             android:clickable="true"
+            android:elevation="30dp"
+            android:visibility="gone"
             app:backgroundTint="#6E6E6E"
             app:borderWidth="0dp"
-            app:elevation="6dp"
+            app:elevation="30dp"
             app:srcCompat="@drawable/book" />
 
     </com.github.barteksc.pdfviewer.PDFView>
